add margin between teams

--- a/themes/ss_miners/scss/_teams-element.scss
+++ b/themes/ss_miners/scss/_teams-element.scss
@@ -6,6 +6,7 @@
             position: relative;
             height: 336px;
             width: fit-content;
+            margin-right: 3rem;
         }
 
         & .logo {
