add footer element

--- a/themes/ss_miners/css/home-page.css
+++ b/themes/ss_miners/css/home-page.css
@@ -13,6 +13,11 @@
     src: url('/fonts/TitilliumWeb-SemiBold.ttf');
 }
 
+@font-face {
+    font-family: TitilliumWeb-Bold;
+    src: url('/fonts/TitilliumWeb-Bold.ttf');
+}
+
 .button {
     background-color: #002817;
     color: white;
